fixing margin for align

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -97,7 +97,7 @@ h4 {
 
 footer {
 	border-top: 1px solid white;
-	margin: 3em;
+	margin: 2em;
 }
 
 footer > div {
